	- Remove GraphViz2::Parse::Marpa from pre-reqs. This module no longer exists.
		It has been replaced by MarpaX::Grammar::GraphViz2, which depends on MarpaX::Grammar::Parser.
		See the Changes file for GraphViz2 V 2.19 and V 2.15.
	- Remove scripts/marpa.grammar2svg.pl. This script used GraphViz2::Parse::Marpa.
	- Remove corresponding data/Marpa.Grammar.dat and html/Marpa.Grammar.svg.
	- Update MANIFEST and demo output (html/*.svg).

1.11  Thu Jun  6 15:46:00 2013
	- Install Graphviz 2.30.1 from AT&T.
	- Re-create the demo files. See scripts/generate.demo.sh.
	- Update META.json, META.yml, MYMETA.json and MYMETA.yml manually, since (after switching to
		just a Makefile.PL) I can't get make to do it for me.
	- Fix usage of Text::CSV_XS in Lexer.pm without a use stmt. Make it Text::CSV anyway, since that will use
		Text::CSV_XS if it's installed.

1.10  Mon Jun  3 11:25:00 2013
	- Rename CHANGES to Changes as per CPAN::Changes::Spec.
	- Remove Build.PL and re-write Makefile.PL to use File::ShareDir:
		Fix installation bug. The tests were calling GraphViz2::Marpa::Utils -> new() which called
		GraphViz2::Marpa::Config -> new() which loaded config/.htgraphviz2.marpa.conf using File::HomeDir.
		Unfortunately, that config file was installed neither by Build.PL nor Makefile.PL.
		So, I've switched to Module::Install to install the config file, and replaced File::HomeDir with
		File::ShareDir. Also, the latter should help MS Windows users (e.g. some CPAN testers) who run tests
		as a user who has no home dir.
		This requires moving the config file from config/ to share/ within this distro.
	- Add scripts/find.config.pl in case you want to find the config file, to edit it say, but for testers
		and end-users that should never be necessary.
	- Remove scripts/copy.config.pl.

1.09  Fri May 31 09:57:00 2013
	- Re-write the code in Build.PL and Makefile.PL which checks for Graphviz (dot) being installed,