@@ -12,7 +12,11 @@ It has been replaced by MarpaX::Grammar::GraphViz2, which depends on MarpaX::Gra
 See the Changes file for GraphViz2 V 2.19 and V 2.15.
 - Remove scripts/marpa.grammar2svg.pl. This script used GraphViz2::Parse::Marpa.
 - Remove corresponding data/Marpa.Grammar.dat and html/Marpa.Grammar.svg.
-- Update MANIFEST and demo output (html/*.svg).
+- Add t/version.t, which Test::Version.
+Update pre-reqs in Makefile.PL.
+- Move t/pod.t to xt/author.
+- Update MANIFEST.
+- Regenerate demo output.
 EOT
 
 [V 1.11]
