@@ -507,4 +507,5 @@ share/.htgraphviz2.marpa.conf
 t/dot2lex.t
 t/lex2parse.t
 t/parse2rend.t
-t/pod.t
+t/version.t
+xt/author/pod.t
