@@ -7,7 +7,11 @@ Revision history for Perl extension GraphViz2::Marpa.
 		See the Changes file for GraphViz2 V 2.19 and V 2.15.
 	- Remove scripts/marpa.grammar2svg.pl. This script used GraphViz2::Parse::Marpa.
 	- Remove corresponding data/Marpa.Grammar.dat and html/Marpa.Grammar.svg.
-	- Update MANIFEST and demo output (html/*.svg).
+	- Add t/version.t, which Test::Version.
+		Update pre-reqs in Makefile.PL.
+	- Move t/pod.t to xt/author.
+	- Update MANIFEST.
+	- Regenerate demo output.
 
 1.11  Thu Jun  6 15:46:00 2013
 	- Install Graphviz 2.30.1 from AT&T.
